# BifrostX

./: .gitignore  README.md  pyproject.toml  start_server.py
Adapters/llm-gpt35/: bifrost.toml
Adapters/llm_aliyun_qianwen/: __init__.py  bifrostx.toml
Adapters/llm_openai_gpt/: __init__.py  bifrost.toml  bifrostx.toml
Adapters/llm_zhipu_glm/: __init__.py  bifrost.toml  bifrostx.toml
Components/chat_with_llm/: __init__.py  bifrost.toml  bifrostx.toml
Interfaces/llm/: __init__.py  bifrost.toml  interface.py
Interfaces/llm_chat/: __init__.py  bifrost.toml  bifrostx.toml  interface.py  schema.py
Interfaces/llm_chat_with_ability/: __init__.py  bifrostx.toml
bifrost/: cli.py  config.py  initialization.py  main.py  server.py
bifrost/adapter/: base.py  instance.py  profile.py  register.py
bifrost/component/: base.py  profile.py  register.py
bifrost/core/: profile.py
bifrost/interface/: base.py  instance.py  profile.py  register.py
bifrost/utils/: logger.py
bifrostx/: server.py
fontend/: index.html
fontend/assets/: 2.html
server/: __init__.py
test/: test_component.py  test_server.py  test_start.py
