[project]
name = "Bifrost2"
version = "0.1.0"
description = ""
authors = [
    {name = "Bevis", email = "alonefire@foxmail.com"},
]
dependencies = [
    "pydantic>=2.4.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.10.1",
]
