[project]
name = "Bifrost2"
version = "0.1.0"
description = ""
authors = [
    {name = "Bevis", email = "alonefire@foxmail.com"},
]
dependencies = [
    "pydantic>=2.4.2",
    "loguru>=0.7.2",
    "pydantic-settings>=2.0.3",
    "fastapi>=0.104.1",
    "click>=8.1.7",
    "hypercorn>=0.15.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.10.1",
]
